--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,3 +21,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+main{
+  padding:1rem
+}
+.product-info{
+  padding:0.5rem
+}
+.products{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.product{
+  border:1px solid rgb(49, 48, 48);
+  margin:1rem;
+}
+.product img{
+  width: 100%;
+  max-width:400px;
+  background-image:cover;
+  
+}
